[package]
name = "grrs"
version = "0.1.0"
authors = ["Carlton Joseph <carlton.joseph@gmail.com>"]
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/carltonj2000/grrs"
repository = "https://github.com/carltonj2000/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.17", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"
