[package]
name = "grrscj"
version = "0.1.0"
edition = "2021"
authors = ["Carlton Joseph <carlton.joseph@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/carltonj2000/grrs"
repository = "https://github.com/carltonj2000/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.17", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"
